2009-02-03	Jannis Pohlmann <jannis@xfce.org>

	* panel-plugin/xfce-mixer-plugin.c: Use the GstMixerTrack "label"
	  property instead of the struct member to access the name of a track.
	  Toggle record for capture tracks instead of trying to mute them.
	  Capture tracks don't support muting (bug #4777).
	* xfce4-mixer/xfce-mixer-track.c: Don't show the mute button for 
	  capture tracks (follow up of bug #4777). 
	* xfce4-mixer/xfce-mixer.c: Use the "label" property everywhere. I 
	  missed a few appearances of the struct member in the previous commit.
	  Copy track labels for the hash table keys. The previous commit b0rked
	  this (follow up of bug #4521).

2009-02-01	Jannis Pohlmann <jannis@xfce.org>

	* libxfce4mixer/libxfce4mixer.c,
	  libxfce4mixer/xfce-mixer-preferences.c,
	  libxfce4mixer/xfce-mixer-track-combo.c,
	  xfce4-mixer/xfce-mixer-controls-dialog.c,
	  xfce4-mixer/xfce-mixer-option.c, xfce4-mixer/xfce-mixer-switch.c,
	  xfce4-mixer/xfce-mixer-track.c, xfce4-mixer/xfce-mixer.c: Don't read
	  track labels from the 'label' member of the GstMixerTrack struct. 
	  Instead, use the 'label' property. The struct member is undocumented
	  and may not work with all backends.

2009-01-25	Jannis Pohlmann <jannis@xfce.org>

	* == 4.5.99.1 released! ==
	* NEWS: Update NEWS file for the release.
	* configure.in.in: Bump version number and dependencies.

2009-01-14	Jannis Pohlmann <jannis@xfce.org>

	* configure.in.in: Post-release version bump.

2009-01-11	Jannis Pohlmann <jannis@xfce.org>

	* == 4.5.93 released! ==
	* configure.in.in: Bump version and dependencies and a remove 'svn'
	  version tag.

2009-01-11	Jannis Pohlmann <jannis@xfce.org>

	* NEWS: Update NEWS for the upcoming 4.5.93 release.

2009-01-11	Jannis Pohlmann <jannis@xfce.org>

	* panel-plugin/xfce-volume-button.c: Change step size to 5% instead
	  of 1% because 1% is unusable if you don't have a laptop with a nice
	  touchpad. I'll have to come up with a more intelligent solution for