@@ -11,7 +11,7 @@ m4_define([xfce4_mixer_version_minor], [5])
 m4_define([xfce4_mixer_version_micro], [99])
 m4_define([xfce4_mixer_version_nano],  [1]) dnl leave this empty to have no nano version
 m4_define([xfce4_mixer_version_build], [r@REVISION@])
-m4_define([xfce4_mixer_version_tag],   [])
+m4_define([xfce4_mixer_version_tag],   [svn])
 m4_define([xfce4_mixer_version], [xfce4_mixer_version_major().xfce4_mixer_version_minor().xfce4_mixer_version_micro()ifelse(xfce4_mixer_version_nano(), [], [], [.xfce4_mixer_version_nano()])ifelse(xfce4_mixer_version_tag(), [svn], [xfce4_mixer_version_tag()-xfce4_mixer_version_build()], [xfce4_mixer_version_tag()])])
 
 dnl *******************************************
